--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.87.1",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "axios": "1.4.0",
